--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "biome-write": "npx @biomejs/biome format --write .",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "parse:resume": "node scripts/extract-resume.mjs"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -33,6 +34,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.25.0",
     "typescript": "^5.8.3",
-    "tzdata": "^1.0.44"
+    "tzdata": "^1.0.44",
+    "pdf-parse": "^1.1.1"
   }
 }
