--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.1",
     "@once-ui-system/core": "^1.4.27",
+    "@vercel/speed-insights": "^1.2.0",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
     "gray-matter": "^4.0.3",
@@ -33,8 +34,8 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.25.0",
+    "pdf-parse": "^1.1.1",
     "typescript": "^5.8.3",
-    "tzdata": "^1.0.44",
-    "pdf-parse": "^1.1.1"
+    "tzdata": "^1.0.44"
   }
 }
